# ROV

./: .gitignore  README.md
CarControl/: README.md  car_server_pwm.py
Demo/: demo1.py
Document/: CONSTANT_HEADER  config_design.md  discuss.md  network_config.md  protocal.md
Document/protocol/: 10001.pro  10003.pro  20001.pro  30001.pro
Document/trashbin/: protocal (复制 1).md  protocal.html
PiVlcPlayer/: README.md  settings.gradle
PiVlcPlayer/app/: build.gradle  proguard-rules.pro
PiVlcPlayer/app/src/main/: AndroidManifest.xml
PiVlcPlayer/app/src/main/res/drawable/: bg_arrow1.xml  bg_arrow2.xml  bg_arrow3.xml  bg_arrow4.xml  bg_arrow5.xml  bg_arrow6.xml  bg_arrow7.xml  bg_arrow8.xml
PiVlcPlayer/app/src/main/res/layout/: activity_main.xml  activity_main2.xml  (+8 more)
PiVlcPlayer/vlcplayer/: build.gradle
PiVlcPlayer/vlcplayer/src/main/: AndroidManifest.xml
ROVAndroid/: .gitignore
ROVAndroid/app/: build.gradle
ROVAndroid/app/src/main/: AndroidManifest.xml
Vcamkit/: CMakeLists.txt  README.md
Vcamkit/cmake/modules/: FindLibrtmp.cmake
Vcamkit/include/: camkit.h
Vcamkit/include/camkit/: config.h  rtmp_send.h  simple_image.h
Vcamkit/src/: CMakeLists.txt  rtmp_send.c  simple_demo.c  simple_image.c  simple_rtmp.c  simple_test.c  v4l_capture.c
Vcamkit/刘志杰@192.168.199.219/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
Vcamkit/刘志杰@192.168.199.219/src/: Makefile  cktool  cmake_install.cmake  libcamkit.so.0  libcamkit.so.0.2  simple_image
file/: README.md  db.sqlite3  token.txt
file/file/: settings.py  urls.py
file/one/: models.py  views.py
file/one/migrations/: 0001_initial.py
file/one/static/css/: demo.css
file/one/static/js/: ip.js  stream-v1.js  video.sdp  video0.sdp  video1.sdp
file/one/templates/: car.html  car.html.save  test.html  wificonfig.html
file/upload/: 161115+（专业）华南师范大学计算机学院民主测评评分表.xlsx  ex3.py  树莓派小车端开发工作计划20161118.doc  项目工作安排.docx
fileT/fileupload/: db.sqlite3
fileT/fileupload/demo/: models.py  views.py
fileT/fileupload/demo/migrations/: 0001_initial.py
fileT/fileupload/demo/static/js/: stream-v1.js
fileT/fileupload/demo/templates/: index.html
fileT/fileupload/fileupload/: settings.py  urls.py
pi视频流传输/: README.md
pi视频流传输/nodejs/: index.html
raspberry pi/movement_control/: README.md  four_wheel_device.py  keyboard_control.py  movement_server.py  two_wheel_device.py
raspberry pi/movement_control/小车控制-控速版/: 控制端页面.html
raspberry pi/old/小车控制-控速版/: L298N_car2_pwm.py  car_server_pwm.py
raspberry pi/old/小车控制-无速度控制版/: L298N_car2.py
raspberry pi/pi视频流传输/: README.md  process_client.py
raspberry pi/pi视频流传输/nodejs/: index.html  server.js
raspberry pi/require/script/: my_supplicant.conf  ras_script  sources.list
raspberry pi/script/: ras_script
raspberry pi/script/openCV/: openCV.sh
raspberry pi/script/startup/: interfaces  my_supplicant.conf  ras_script.sh
raspberry pi/待整合/小车控制-控速版/: README.md
raspberry pi/待整合/小车控制-无速度控制版/: car-server.py
两轮小车控制/: README.md  keyboard_control.py
小车控制-控速版/: L298N_car2-pwm.py  README.md  car_server_pwm.py  控制端页面.html
小车控制-无速度控制版/: Readme.RM  Readme.md
(+22 files in other folders)
